--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -26,4 +26,4 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run trading bot script
-        run: python trading_bot.py
+        run: python crypto_predictor.py
