--- a/config.json
+++ b/config.json
@@ -13,6 +13,9 @@
     "volAvg_window": 20,
     "stoch_smooth_k": 3,
     "stoch_smooth_d": 3,
+    "take_profit_pct": 0.04,
+    "stop_loss_pct": 0.02,
+    "leverage": 10
     "sender_email": "renewal398@gmail.com",     
     "sender_password": "iqgq ygia kfsx ybrw",   
     "smtp_server": "smtp.gmail.com",
